libr/include/r_bin.h

typedef struct r_bin_t RBin;
typedef enum {
	R_BIN_SYM_ENTRY,
	R_BIN_SYM_INIT,
	R_BIN_SYM_MAIN,
	R_BIN_SYM_FINI,
	R_BIN_SYM_LAST
} RBinSym;
typedef enum {
	R_BIN_LANG_NONE = 0,
	R_BIN_LANG_JAVA,
	R_BIN_LANG_C,
	R_BIN_LANG_GO,
	R_BIN_LANG_CXX,
	R_BIN_LANG_OBJC,
	R_BIN_LANG_SWIFT,
	R_BIN_LANG_DLANG,
	R_BIN_LANG_MSVC,
	R_BIN_LANG_RUST,
	R_BIN_LANG_KOTLIN,
	R_BIN_LANG_PASCAL,
	R_BIN_LANG_DART,
	R_BIN_LANG_GROOVY,
	R_BIN_LANG_JNI,
	R_BIN_LANG_CIL,
	R_BIN_LANG_IBMXL,
	R_BIN_LANG_C_BLOCKS,
	R_BIN_LANG_CXX_BLOCKS,
	R_BIN_LANG_OBJC_BLOCKS,
	R_BIN_LANG_LAST,
	R_BIN_LANG_ANY = -1,
} RBinLanguage;
typedef RVPack RBinLanguages;
typedef struct r_bin_attr_t {
	RBinAttribute flags;
	char *ns;
	ut32 size;
	int offset;
	RBinLanguage lang;
	RBinFieldKind kind;
} RBinAttr;
typedef struct r_bin_addr_t {
	ut64 vaddr;
	ut64 paddr;
	ut64 hvaddr;
	ut64 hpaddr;
	int type;
	int bits;
} RBinAddr;
// TODO: this struct must be used from RFlagItem we have this same thing dupped
typedef struct r_bin_name_t {
	char *name; // demangled name
	char *oname; // original (mangled) name // aka rawname in rflagitem
	char *fname; // flag name
	// char *uname; // user-defined custom name TODO
} RBinName;
typedef struct r_bin_hash_t {
	const char *type;
	ut64 addr;
	int len;
	ut64 from;
	ut64 to;
	ut8 buf[32];
	const char *cmd;
} RBinHash;
typedef struct r_bin_info_t {
	char *file;
	char *type;
	char *bclass;
	char *rclass;
	char *arch;
	char *cpu;
	char *machine;
	char *flags; // elf.flags, which can ship info about cpu features or the abi used
	char *abi;
	char *os;
	char *subsystem;
	char *rpath;
	char *guid;
	char *debug_file_name;
	const char *lang;
	char *default_cc;
	RList/*<RBinFileHash>*/ *file_hashes;
	int bits;
	int has_retguard; // can be -1 , 0 and 1
	bool has_va;
	bool has_pi; // pic/pie
	bool has_canary;
	bool has_sanitizers;
	bool has_crypto;
	bool has_nx;
	bool has_nobtcfi; // only used by OpenBSD for now no branch target control flow integrity
	bool has_libinjprot; // binary allows libraries to be injected
	int big_endian;
	bool has_lit;
	char *actual_checksum;
	char *claimed_checksum;
	int pe_overlay;
	bool signature;
	ut64 dbg_info;
	RBinHash sum[3];
	ut64 baddr;
	char *intrp;
	char *compiler;
	char *charset;
	char *dbglink;
} RBinInfo;
typedef struct r_bin_symbol_t {
	RBinName *name;
	char *classname;
	char *libname;
	/* const-unique-strings */
	const char *forwarder;
	const char *bind; // tied to attr already
	// RBinName *type;
	const char *type;
	char *rtype;
	bool is_imported;
	// Per-method arg-slot metadata for stack-VM archs (JVM, Dalvik, ...).
	// Anal uses these to synthesize register-kind argument variables.
	// arg_count == 0 means no metadata is available for this symbol.
	ut16 arg_first;          // first arg register index in the bytecode reg space
	ut16 arg_count;          // VM locals/arg slots for variable recovery (0 = no metadata)
	ut16 cc_arg_count;       // descriptor/callconv arg slots; can be zero for no-arg funcs
	/* only used by java */
	ut64 vaddr;
	ut64 paddr;
	/* Contiguous format metadata immediately before the code entrypoint. */
	ut32 hsize;
	RBinAttr attr;
	ut32 ordinal;
	int bits;
	int dup_count;
	ut16 ret_count;          // number of return slots (0 = void)
	const char *arg_prefix;  // interned register name prefix, e.g. "v" or "l"
} RBinSymbol;
typedef struct r_bin_section_t {
	char *name;
	ut64 size;
	ut64 vsize;
	ut64 vaddr;
	ut64 paddr;
	ut32 perm;
	ut32 flags;
	const char *type;
	const char *arch;
	char *format;
	int bits;
	bool has_strings;
	bool add; // indicates when you want to add the section to io `S` command
	bool is_data;
	bool is_segment;
	int backing_fd;

	RSlice bytes;
} RBinSection;
typedef struct r_bin_import_t {
	RBinName *name;
// 	char *name;
	char *libname;
	const char *bind;
	const char *type;
	char *classname;
	char *descriptor;
	ut32 ordinal;
	// used by elf, so we just expose them here, so we can remove the internal representation dupe
	bool in_shdr;
	bool is_sht_null;
	bool is_vaddr; /* when true, offset is virtual address, otherwise it's physical */
	bool is_imported;
} RBinImport;
typedef struct r_bin_string_t {
	char *string; // TODO: rename to text or so
	ut64 vaddr;
	ut64 paddr;
	ut32 ordinal;
	ut32 size; // size of buffer containing the string in bytes
	ut32 length; // length of string in chars
	char type; // Ascii Wide cp850 utf8 base64 ...
} RBinString;
typedef struct r_bin_resource_t {
	char *name;
	char *type;
	char *encoding; // NULL/raw, base64, data-uri, gzip, zlib, lz4, utf16, utf16le or utf16be
	char *language;
	char *timestamp;
	char *origin; // source module or container, when applicable
	ut64 vaddr;
	ut64 paddr;
	ut64 size;
	ut64 id; // UT64_MAX when the resource has a textual name
	ut32 index;
	ut32 type_id; // UT32_MAX when the resource type has a textual name
	ut32 language_id;
	ut32 codepage;
	bool named;
} RBinResource;
typedef struct r_bin_reloc_t {
	ut8 type; // type have implicit size.. but its anoying
	ut8 additive;
	bool is_ifunc;
	ut32 visibility;
	ut64 ntype; // type number coming from the bin file
	RBinSymbol *symbol;
	RBinImport *import;
	ut64 laddr; // local symbol address | UT64_MAX
	// RBinSymbol *lsymbol; // still unused
	st64 addend;
	ut64 vaddr;
	ut64 paddr;
	/* is_ifunc: indirect function, `addend` points to a resolver function
	 * that returns the actual relocation value, e.g. chooses
	 * an optimized version depending on the CPU.
	 * cf. https://gcc.gnu.org/onlinedocs/gcc/Common-Function-Attributes.html
	 */
} RBinReloc;
typedef struct r_bin_object_t {
	ut64 baddr;
	st64 baddr_shift;
	ut64 loadaddr;
	ut64 boffset;
	ut64 size;
	ut64 obj_size;
	RStrpool *pool;
	RVecRBinImport imports_vec;
	RVecRBinSymbol symbols_vec;
	RVecRBinSection sections_vec;
	RVecRBinResource resources_vec;
	RVecRBinEntry entries_vec;
	RList/*<??>*/ *entries;
	RList/*<??>*/ *fields;
	RList/*<??>*/ *libs;
	RVecRBinReloc *relocs;
	RVecRBinString strings;
	RList/*<RBinClass>*/ *classes;
	HtPP *classes_ht;
	RList/*<RBinDwarfRow>*/ *lines;
	HtUP *strings_db; // vaddr -> strings index + 1
	RList/*<??>*/ *mem; // RBinMem maybe?
	RList/*<BinMap*/ *maps;
	char *regstate;
	RBinInfo *info;
	RBinAddr *binsym[R_BIN_SYM_LAST];
	struct r_bin_plugin_t *plugin;
	RBinLanguages langs;
	Sdb *kv;
	HtUP *addr2klassmethod;
	HtUP *symbol_addr_ht; // vaddr/paddr -> RBinSymbol* (lazy, owned by object)
	HtPP *import_name_ht;
	HtUP *import_addr_ht;
	RVecRBinSymbol *import_symbols;
	void *filters; // symbol/section filter tables (HtPP/HtSU) owned by object
	void *bin_obj; // internal pointer used by formats... TODO: RENAME TO internal object or sthg
	bool is_reloc_patched; // used to indicate whether relocations were patched or not
	bool resources_loaded;
} RBinObject;
// XXX: RBinFile may hold more than one RBinObject?
/// XX curplugin == o->plugin
typedef struct r_bin_file_t {
	char *file;
	int fd;
	ut64 size;
	int rawstr;
	int strmode;
	ut32 id;
	RBuffer *buf;
	ut64 offset; // XXX
	RBinObject *bo;
	void *xtr_obj;
	ut64 user_baddr; // XXX
	ut64 loadaddr; // XXX
	/* values used when searching the strings */
	int minstrlen;
	int maxstrlen;
	int narch;
	struct r_bin_xtr_plugin_t *curxtr;
	// struct r_bin_plugin_t *curplugin; // use o->plugin
	RList *xtr_data;
	Sdb *sdb;
	Sdb *sdb_info;
	RBinAddrLineStore addrline;
	struct {
		char *comp_dir;           // Main compilation directory
		HtUP *comp_dirs;          // Map of offset -> comp_dir for multiple CUs
	} dwarf_metadata;
	struct r_bin_t *rbin;
	int string_count;
	RArena *arena;
} RBinFile;
struct r_bin_t {
	const char *file;
	RBinFile *cur; // TODO: deprecate
	int narch;
	void *user;
	/* preconfigured values */
	bool strings_nofp; // move to options struct passed instead of min, dump raw on every getstrings call
	Sdb *sdb;
	RVecBinSymclassGlob symclass_globs; // glob keys cached from symclass.sdb for r_bin_import_tags
	RIDStorage *ids;
	RMutaBind mb;
	RList/*<RBinFile>*/ *binfiles;
	PrintfCallback cb_printf;
	int loadany;
	RIOBind iob;
	RConsBind consb;
	char *force;
	bool want_dbginfo;
	int filter; // symbol filtering
	char strfilter; // string filtering
	char *strpurge; // purge false positive strings
	char *srcdir; // dir.source
	char *srcdir_base; // dir.source.base
	char *sdbdir; // dir.binsdb
	char *prefix; // bin.prefix
	char *strenc;
	ut64 filter_rules;
	RStrConstPool constpool;
	RBinOptions options;
	RLibStore *libstore;
	RList /*<RBinDemanglePlugin *>*/ *demangle_plugins;
	HtPP /*<char *, RBinDemanglePlugin *>*/ *demangle_by_name;
	RBinDemanglePlugin *demangle_by_type[R_BIN_DEMANGLE_TYPE_SLOTS];
	struct r_fs_t *fs; // optional: r_bin_open_buf probes containers via r_fs
};
// R2_590 - deprecate this struct which looks dupe from RArchConfig
typedef struct r_bin_arch_options_t {
	const char *arch;
	int bits;
} RBinArchOptions;
typedef struct r_bin_plugin_t {
	RPluginMeta meta;
	void (*init)(RBin *bin);
	void (*fini)(RBin *bin);
	Sdb * (*get_sdb)(RBinFile *obj);
	bool (*load)(RBinFile *bf, RBuffer *buf, ut64 laddr);
	ut64 (*size)(RBinFile *bin); // return ut64 maybe? meh
	void (*destroy)(RBinFile *bf);
	bool (*check)(RBinFile *bf, RBuffer *buf);
	ut64 (*baddr)(RBinFile *bf);
	RBinAddr* (*binsym)(RBinFile *bf, int num);
	RList/*<RBinAddr>*/* (*entries)(RBinFile *bf);
	bool (*sections_vec)(RBinFile *bf); // R2_590
	bool (*symbols_vec)(RBinFile *bf);
	bool (*imports_vec)(RBinFile *bf);
	R_UNOWNED RList/*<RBinDwarfRow>*/* (*lines)(RBinFile *bf);
	RVecRBinString *(*strings)(RBinFile *bf);
	RBinInfo/*<RBinInfo>*/* (*info)(RBinFile *bf);
	RList/*<RBinField>*/* (*fields)(RBinFile *bf);
	RList/*<char *>*/* (*libs)(RBinFile *bf);
	RVecRBinReloc *(*relocs)(RBinFile *bf);
	R_UNOWNED RVecRBinTrycatch *(*trycatch)(RBinFile *bf);
	RList/*<RBinClass>*/* (*classes)(RBinFile *bf);
	RList/*<RBinMem>*/* (*mem)(RBinFile *bf);
	RVecRBinReloc *(*patch_relocs)(RBinFile *bf); // NULL keeps the current relocs
	RList/*<RBinMap>*/* (*maps)(RBinFile *bf); // this should be segments!
	RList/*<RBinFileHash>*/* (*hashes)(RBinFile *bf);
	char* (*header)(RBinFile *bf, int mode);
	char* (*signature)(RBinFile *bf, bool json);
	RBinLanguage (*demangle_type)(const char *str);
	struct r_bin_write_t *write;
	ut64 (*get_offset) (RBinFile *bf, int type, int idx);
	const char* (*get_name)(RBinFile *bf, int type, int idx, bool simplified);
	// Optional per-function calling convention name for anal.cc=dyncc
	const char *(*get_cc)(RBinFile *bf, ut64 vaddr);
	ut64 (*get_vaddr)(RBinFile *bf, ut64 baddr, ut64 paddr, ut64 vaddr);
	RBuffer* (*create)(RBin *bin, const ut8 *code, int codelen, const ut8 *data, int datalen, RBinArchOptions *opt);
	char* (*demangle)(const char *str);
	char* (*regstate)(RBinFile *bf);
	bool (*cmd)(RBinFile *bf, const char *command);
	char* (*types)(RBinFile *bf);
	// TODO: R2_600 RBuffer* (*create)(RBin *bin, RBinCreateOptions *opt);
	/* default value if not specified by user */
	int minstrlen;
	char strfilter;
	bool weak_guess;
	void *user;
	bool (*load_resources)(RBinFile *bf);
	/* Optional raw-data resolver. The returned buffer is owned by the caller. */
	RBuffer *(*get_resource_data)(RBinFile *bf, const RBinResource *resource);
	const char *iouris; // comma-separated IO URI prefixes allowed for redirects
	const char *(*iouri)(RBinFile *bf); // selects one iouris item, or the sole item by default
} RBinPlugin;
typedef struct r_bin_field_t {
	ut64 vaddr;
	ut64 paddr;
	ut64 value;
	RBinAttr attr;
	RBinName *name;
	RBinName *type;
	bool format_named; // whether format is the name of a format or a raw pf format string
	char *comment;
	char *format;
} RBinField;
typedef struct r_bin_write_t {
	RBinWriteScnResize scn_resize;
	RBinWriteScnPerms scn_perms;
	RBinWriteSegPerms seg_perms;
	RBinWriteRpathDel rpath_del;
	RBinWriteEntry entry;
	RBinWriteAddLib addlib;
	RBinWriteLibWeak lib_weak;
} RBinWrite;
R_API void r_bin_free(RBin *bin);